# daily-coding-problem

./: Makefile  README.md  main.py  pyproject.toml
src/solutions/: solution001.py  solution002.py  solution003.py  solution004.py  solution005.py  solution006.py  solution007.py  solution008.py  solution009.py  solution010.py  solution011.py  solution012.py  solution013.py  solution014.py  solution015.py  solution016.py
