[tool.poetry]
name = "daily-coding-problems"
version = "0.1.0"
description = "Solutions to problems from dailycodingproblem.com"
authors = ["Sam Wong <samtcwong@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
